--- a/assets/css/headers/header.css
+++ b/assets/css/headers/header.css
@@ -4,7 +4,7 @@
 }
 
 .header__container {
-    max-width: 1332px;
+    max-width: 1382px;
     padding: 0 16px;
     margin: 0 auto;
     display: flex;
@@ -12,8 +12,11 @@
 }
 
 .header__logo {
-    display: block;
-    margin-right: auto;
+    flex-grow: 1;
+}
+
+.header__logo-link {
+    display: inline-block;
 }
 
 .header__logo-picture {
@@ -54,4 +57,117 @@
     font-size: 13px;
     line-height: 140%;
     color: #fff;
+}
+
+.header__wrapper {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.header__burger {
+    display: none;
+}
+
+@media (max-width: 991px) {
+    .header__wrapper {
+        position: fixed;
+        top: 92px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #F3F5F6;
+        transform: translateX(-120%);
+        z-index: 1000;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px 16px 132px;
+        overflow: auto;
+        transition: transform .2s ease;
+    }
+
+    .header__wrapper.active {
+        transform: translateX(0);
+    }
+
+    .header__burger {
+        display: flex;
+        align-items: center;
+        width: 40px;
+        height: 30px;
+        position: relative;
+        cursor: pointer;
+    }
+
+    .header__burger-line,
+    .header__burger::before,
+    .header__burger::after {
+        width: 100%;
+        height: 6px;
+        background-color: #162831;
+        border-radius: 5px;
+        transition: opacity .2s ease, transform .2s ease, top .2s ease, bottom .2s ease;
+    }
+
+    .header__burger::before,
+    .header__burger::after {
+        content: '';
+        position: absolute;
+        left: 0;
+    }
+
+    .header__burger::before {
+        top: 0;
+    }
+
+    .header__burger::after {
+        bottom: 0;
+    }
+
+    .header__burger.active .header__burger-line {
+        opacity: 0;
+    }
+
+    .header__burger.active::before {
+        top: 50%;
+        transform: translateY(-50%) rotate(45deg);
+    }
+
+    .header__burger.active::after {
+        bottom: 50%;
+        transform: translateY(50%) rotate(-45deg);
+    }
+
+    .menu-header__list {
+        display: block;
+    }
+
+    .header__menu {
+        margin-right: 0;
+        margin-bottom: 16px;
+        flex-grow: 1;
+    }
+
+    .header {
+        padding: 16px 0;
+        z-index: 1000;
+    }
+
+    .menu-header__item {
+        margin-right: 0;
+        margin-bottom: 16px;
+    }
+
+    .menu-header__item:last-child {
+        margin-bottom: 0;
+    }
+
+    .menu-header__link {
+        font-size: 18px;
+    }
+
+    .header__logo {
+        position: relative;
+    }
 }
