--- a/assets/css/blocks/about.css
+++ b/assets/css/blocks/about.css
@@ -5,3 +5,9 @@
 .about__item:last-child {
     margin-bottom: 0;
 }
+
+@media (max-width: 991px) {
+    .about__item {
+        margin-bottom: 40px;
+    }
+}
