--- a/assets/css/blocks/promo.css
+++ b/assets/css/blocks/promo.css
@@ -27,6 +27,7 @@
     font-size: 24px;
     line-height: 140%;
     color: #fff;
+    text-align: center;
     margin-bottom: 40px;
 }
 
@@ -54,4 +55,25 @@
     font-size: 64px;
     line-height: 140%;
     color: #fff;
+    text-align: center;
+}
+
+@media (max-width: 991px) {
+    .promo {
+        min-height: 350px;
+    }
+
+    .promo__title {
+        font-size: 48px;
+    }
+}
+
+@media (max-width: 767px) {
+    .promo__name::before {
+        margin-right: 30px;
+    }
+
+    .promo__name::after {
+        margin-left: 30px;
+    }
 }
